[package]
name = "httpbl-auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
hickory-resolver = "0.25"
ipaddress = "0.1.3"
log = "0.4"
env_logger = "0.11"
config = "0.15"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization.